--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="assets/css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/myStyle.css" />
   </head>
-  <body>
+  <body class="fade-out " onload="typeWriter()">
     <header>
       <div class="index-page sidebar-collapse">
         <nav
@@ -86,6 +86,10 @@
             data-parallax="true"
             style="background-image: url('images/Shashank.jpg')"
           ></div>
+          <div class="container">
+            <div class="content-center brand">
+              <div style="margin-top: 800px;"><h2><span id="desp" ></span></h2></div>
+          </div>
         </div>
       </div>
     </div>
@@ -139,7 +143,7 @@
     
     <div class="Skill" id="skill">
       <div class="container">
-        <h2 class="content"><strong>My Skills </strong></h2>
+        <h2 class="center"><strong>My Skills </strong></h2>
         <div class="card">
           <div class="row">
             <div class="col-lg-6 col-md-12">
@@ -151,7 +155,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 80%"
                         aria-valuenow="25"
@@ -170,7 +174,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 85%"
                         aria-valuenow="25"
@@ -189,7 +193,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 75%"
                         aria-valuenow="25"
@@ -208,7 +212,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 80%"
                         aria-valuenow="25"
@@ -231,7 +235,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 70%"
                         aria-valuenow="25"
@@ -250,7 +254,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 70%"
                         aria-valuenow="25"
@@ -269,7 +273,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 60%"
                         aria-valuenow="25"
@@ -288,7 +292,7 @@
                   <div class="col-sm-8">
                     <div class="progress">
                       <div
-                        class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+                        class="progress-bar progress-bar-striped bg-primary progress-bar-animated"
                         role="progressbar"
                         style="width: 60%"
                         aria-valuenow="25"
@@ -308,10 +312,10 @@
     </div>
 
     <!-- My Education -->
-    <div class="Skill" id="education">
+  <div class="Skill" id="education">
     <div class="section section-tabs">
       <div class="container">
-        <h2 class="content"><strong>Education</strong></h2>
+        <h2 class="center"><strong>Education</strong></h2>
         <div class="row">
           <!-- Tabs with Background on Card -->
           <div class="card">
@@ -319,7 +323,7 @@
               <ul
                 class="nav nav-tabs nav-tabs-neutral justify-content-center"
                 role="tablist"
-                data-background-color="orange"
+                data-background-color="green"
               >
                 <li class="nav-item">
                   <a
@@ -409,12 +413,15 @@
       </div>
     </div>
   </div>
-<div class="content ">
-  <i class="fab fa-linkedin-in green fa-2x" id="contact"></i>
+
+  <!-- Project Section -->
+
+
+
+<div class="center ">
+  <a href="https://www.linkedin.com/in/shashank-sharma-733144170/" target="_blank"><i class="fab fa-linkedin-in green fa-2x" id="contact"></i></a>
   <h4><b> Shashank Sharma </b></h4>
   ©Shashank Sharma. All rights reserved
-
-    
 </div>
 
 
