Link added correctly and CSS changes

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         <li>
           <div class="direction-l">
             <div class="flag-wrapper">
-              <span class="flag">Post Graduate Diploma in Advanced Computing (PG-DAC)</span>
+              <span class="flag">PG-DAC</span>
               <span class="time-wrapper"><span class="time">2019-2020</span></span>
             </div>
-            <div class="desc"><a href="https://know-it.co.in/Home/Index" target="_blank"></a>Know-IT,C-DAC Acts</a><br>Pune (Maharashtra)</div>
+            <div class="desc"><a href="https://know-it.co.in/Home/Index" target="_blank">Know-IT,C-DAC Acts</a><br>Pune (Maharashtra)</div>
           </div>
         </li>
 
