added simon game and bug fixed

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <div class="col-sm-4">
                     <strong class="text-uppercase">Language:</strong>
                   </div>
-                  <div class="col-sm-8">Hindi , English(Internediate) , German(Basic)</div>
+                  <div class="col-sm-8">Hindi , English(Intermediate) , German(Basic)</div>
                 </div>
               </div>
             </div>
@@ -538,7 +538,7 @@
                     data-toggle="tab"
                     href="#movie"
                     role="tab"
-                    >Movie Rental Site</a
+                    >Vidly</a
                   >
                 </li>
                 <li class="nav-item">
@@ -559,11 +559,11 @@
                   <strong> Description : </strong>
                   Simon is an electronic game of memory skill. The device has four colored buttons, each producing a particular tone when it is pressed or activated by the device. A round
                   in the game consists of the device lighting up one or more buttons in a random order, after which the player must reproduce that order by pressing the buttons.
-                  As the game progresses, the number of buttons to be pressed increases. <a href="">Play Now</a>
+                  As the game progresses, the number of buttons to be pressed increases.
+                  <b> <a href="simon.html">Play Now</a></b>
                        <br><br><br>
                  <strong> Platform : </strong> <span class="green"> HTML , JavaScript , Bootstrap</span>
-                 <br> <br>
-                 <strong> Duration : </strong> <span class="green"> 15 days</span>
+
                 </div>
 
                 <div class="tab-pane left" id="hotel" role="tabpanel">
@@ -579,11 +579,9 @@
 
                 <div class="tab-pane left" id="movie" role="tabpanel">
                   <strong> Description : </strong>
-                    Medicine are expensive and many people cannot afford them . Healping hand is a Web based application which provide
-                     a way to donate unused madicine to needy people . The doner can register on our portal and can donate the medicine to diff erent NGO's 
-                      which are register to our poratl.
+                   Vidly is a movie rental application where customer can  rent movies  by registering on our application on basis subscription level.
                        <br><br><br>
-                 <strong> Platform : </strong> <span class="green"> HTML , JavaScript , ASP.net MVC , SQL </span>
+                 <strong> Platform : </strong> <span class="green"> HTML , JavaScript , C# , SQL </span>
                  <br> <br>
                  <strong> Duration : </strong> <span class="green"> 15 days</span>
                 </div>
