--- a/index.html
+++ b/index.html
@@ -588,9 +588,8 @@
 
                 <div class="tab-pane left" id="helping" role="tabpanel">
                   <strong> Description : </strong>
-                    Medicine are expensive and many people cannot afford them . Healping hand is a Web based application which provide
-                     a way to donate unused madicine to needy people . The doner can register on our portal and can donate the medicine to diff erent NGO's 
-                      which are register to our poratl.
+                   Medicine are expensive and many people cannot afford them . Helping hand is a Web based application which provide a way to donate unused
+                   medicine to needy people . The donor can register on our portal and can donate the medicine to different NGO's which are register to our portal.
                       <br><br><br>
                  <strong> Platform : </strong> <span class="green"> Java , Sprint Boot REST API , JPA , Angular , Bootstrap , SQL</span>
                  <br><br>
